bakkie_derive/tests/ui/fail/tool_empty_args_invalid_syntax.rs
use bakkie_derive::tool;

#[tool(,)]
async fn my_function(param: String) -> Result<String, String> {
    Ok(param)
}

fn main() {}